--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,9 @@
     -webkit-background-clip: text;
     background-clip: text;
   }
+  .isActive{
+    display: flex !important;
+  }
 @keyframes pulseShadown {
     0% {
         filter: drop-shadow(0px 0px 20px red);
